Remove calls to constructors of Double, Float, Integer, Long, Boolean